public/style.css
body{
    background-color: #BCFCFF;
}

.bg-custom {
    background-color: #FF0C00;
}

.form-submit{
    padding-top: 5%;
    padding-left: 1%;
}

.uploaded-files {
    padding-left: 1%;
    margin-top: 20px;
}

.grid-container{
    display: grid;
    grid-template-columns: auto auto auto;
    padding: 10px;
}

.grid-item{
    text-align: center;
    padding: 10px;
    vertical-align: middle;
}

.mobile-upload{
    display: none !important;
}

.dropzone {
    border: 2px dashed #0087F7 !important;
    border-radius: 5px !important;
    background: white !important;
    /* width: 99%; */
    margin-left: 50px;
    margin-right: 50px;
}

.card{
    /* width: 99%; */
    margin-left: 50px;
    margin-right: 50px;
}

/*
#links{
    margin-left: 10px;
    margin-top: 10px;
    list-style-type: none;
}

.each-file {
    display: flex;
}

@media (min-width:600px)  {

    .each-file > div {
        flex: 1;
    }

    .each-file > .timestamp {
        flex: 2;
        margin-left: 25%;
        align-items: center;
    }

    .each-file > .filesize {
        flex: 1;
    }
}
*/
@media (max-width:600px)  {
/*
    .each-file > div {
        flex: 1;
    }

    .each-file > .timestamp {
        margin-left: 5%;
    }

    .each-file > .filesize {
        margin-left: 5%;
    }
*/
    /* .btn-success{
        margin-top: 5%;
    }

    .mobile-upload{
        display: inline;
    } */

    /* .desktop-upload{
        display: none;
    } */
    .dropzone {
        /* width: 99%; */
        margin-left: 15px;
        margin-right: 15px;
    }

    .card{
        /* width: 99%; */
        margin-left: 15px;
        margin-right: 15px;
    }
}

